--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
+    "sweetalert2": "^11.4.7",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
