--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-datepicker": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-loading-overlay-ts": "^1.0.4",
@@ -51,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-datepicker": "^4.3.4"
   }
 }
