--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.5.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +14,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "ag-grid-community": "^27.1.0",
     "ag-grid-react": "^27.1.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
@@ -21,6 +25,7 @@
     "react-icons": "^4.3.1",
     "react-loading-overlay-ts": "^1.0.4",
     "react-pro-sidebar": "^0.7.1",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
