--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "html-react-parser": "^1.4.10",
+    "moment-timezone": "^0.5.34",
     "react": "^17.0.2",
     "react-datepicker": "^4.4.0",
     "react-dom": "^17.0.2",
@@ -29,6 +30,7 @@
     "react-quill": "^1.3.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-times": "^3.1.12",
     "react-toastify": "^8.2.0",
     "sweetalert2": "^11.4.7",
     "typescript": "^4.6.2",
