--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "node_version": "14.19.0",
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
@@ -22,6 +23,7 @@
     "html-react-parser": "^1.4.10",
     "moment-timezone": "^0.5.34",
     "react": "^17.0.2",
+    "react-calendar": "^3.7.0",
     "react-datepicker": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
