--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^17.0.13",
     "ag-grid-community": "^27.1.0",
     "ag-grid-react": "^27.1.0",
+    "amazon-cognito-identity-js": "^5.2.8",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
