--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "amazon-cognito-identity-js": "^5.2.8",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "date-fn": "0.0.2",
     "formik": "^2.2.9",
     "html-react-parser": "^1.4.10",
     "moment-timezone": "^0.5.34",
