--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.3.4",
-    "cypress": "^9.5.3"
+    "cypress": "^9.5.3",
+    "faker": "^5.5.3"
   }
 }
