--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "amazon-cognito-identity-js": "^5.2.8",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "country-state-city": "^3.0.1",
     "date-fn": "0.0.2",
     "formik": "^2.2.9",
+    "fuse.js": "^6.5.3",
     "html-react-parser": "^1.4.10",
+    "intl-tel-input": "^17.0.16",
     "moment-timezone": "^0.5.34",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
@@ -42,6 +45,8 @@
     "react-quill": "^1.3.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-select": "^5.3.0",
+    "react-select-search": "^3.0.9",
     "react-times": "^3.1.12",
     "react-toastify": "^8.2.0",
     "sweetalert2": "^11.4.7",
