--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ag-grid-community": "^27.1.0",
     "ag-grid-react": "^27.1.0",
     "amazon-cognito-identity-js": "^5.2.8",
+    "apexcharts": "^3.35.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "country-state-city": "^3.0.1",
@@ -36,6 +37,7 @@
     "intl-tel-input": "^17.0.16",
     "moment-timezone": "^0.5.34",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
     "react-calendar": "^3.7.0",
     "react-datepicker": "^4.4.0",
     "react-dom": "^17.0.2",
