--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
       - npm install
   build:
     commands:
+      - export NODE_OPTIONS="--max-old-space-size=8192"
       - npm run build
 
 artifacts:
@@ -13,3 +14,5 @@ artifacts:
     - '**/*'
   discard-paths: no
   base-directory: build
+
+  # xyzhospital-backend-dev-serverlessdeploymentbucke-qhylix3wc4d2
