--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,8 +6,7 @@ phases:
       - npm install
   build:
     commands:
-      - export NODE_OPTIONS="--max-old-space-size=8192"
-      - npm run build
+      - npm run build --prod
 
 artifacts:
   files:
