--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "react-scripts test",
     "cypress": "npx cypress open --env configFile=dev",
     "cypress-record": "npx cypress run --record --key 6bc38aff-d016-4396-a610-dd1260b2f652",
+    "lint": "eslint .",
+    "lint-fix": "eslint --fix .",
     "eject": "react-scripts eject"
   },
   "dependencies": {
@@ -38,7 +40,7 @@
     "fuse.js": "^6.5.3",
     "html-react-parser": "^1.4.10",
     "intl-tel-input": "^17.0.16",
-    "moment-timezone": "^0.5.34",
+    "moment-timezone": "^0.5.38",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-calendar": "^3.7.0",
@@ -55,7 +57,6 @@
     "react-times": "^3.1.12",
     "react-toastify": "^8.2.0",
     "sweetalert2": "^11.4.7",
-    "typescript": "^4.6.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
@@ -79,7 +80,15 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
     "cypress": "^10.2.0",
-    "faker": "^5.5.3"
+    "eslint": "^8.26.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.10",
+    "faker": "^5.5.3",
+    "typescript": "^4.8.4"
   }
 }
