--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "cypress": "npx cypress open --env configFile=dev",
-    "cypress-record": "npx cypress run --record --key 6bc38aff-d016-4396-a610-dd1260b2f652",
+    "cypress-record": "npx cypress run --env configFile=dev",
     "eject": "react-scripts eject"
   },
   "dependencies": {
@@ -31,6 +31,7 @@
     "apexcharts": "^3.35.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "chai": "^4.3.6",
     "country-state-city": "^3.0.1",
     "date-fn": "0.0.2",
     "formik": "^2.2.9",
