--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,6 +1,13 @@
 name: Action Workflow
 
-on: [push]
+on: 
+  push:
+  pull_request:
+    types:  # on this type you can mention like on which action it should call
+      - assigned
+      - closed
+      - reopened
+      - opened
 
 jobs:
   run-github-actions:
