--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -15,7 +15,8 @@ jobs:
         run: |
           echo "WF_ENV: ${WF_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
-           echo "STEP_ENV: ${STEP_ENV}"
+          echo "STEP_ENV: ${STEP_ENV}"
+          echo "${{ secret.TEST_SECRET }}"  # TEST_SECRET added in the github manually
   log-default-env:
     runs-on: ubuntu-latest
     steps:
