--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -16,7 +16,7 @@ jobs:
           echo "WF_ENV: ${WF_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV: ${STEP_ENV}"
-          echo "${{ secrets.TEST_SECRET }}"  # TEST_SECRET added in the github manually
+          echo "TEST_SECRET ${{ secrets.TEST_SECRET }}"  # TEST_SECRET added in the github manually
   log-default-env:
     runs-on: ubuntu-latest
     steps:
