--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       JOB_ENV: Available to all steps in log-env job
+      TEST_ENV: ${{ secrets.TEST_SECRET }}
     steps:
       - name: Log Env Variable
         env:
@@ -16,6 +17,7 @@ jobs:
           echo "WF_ENV: ${WF_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV: ${STEP_ENV}"
+          echo "TEST_ENV: ${TEST_ENV}"
           echo "TEST_SECRET ${{ secrets.TEST_SECRET }}"  # TEST_SECRET added in the github manually
   log-default-env:
     runs-on: ubuntu-latest
