--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-datepicker": "^4.3.4",
     "cypress": "^13.2.0",
     "faker": "^5.5.3"
