--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,13 +1,15 @@
-name: Cypress Tests with Dependency and Artifact Caching
-
+name: Test in Docker
 on: push
-
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
+    # Cypress Docker image from https://hub.docker.com/r/cypress
+    # with browsers pre-installed
+    container:
+      image: cypress/browsers:latest
+      options: --user 1001
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Cypress run
-        uses: cypress-io/github-action@v5
+      - uses: actions/checkout@v4
+      - uses: cypress-io/github-action@v6
+        with:
+          browser: chrome
