--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -12,5 +12,7 @@ jobs:
           # Linux and MacOS
           start: npm start
           wait-on: 'http://localhost:3000'
+          # wait for 2 minutes for the server to respond
+          wait-on-timeout: 120  
           command: npx cypress run
 
