git hub action added

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "cypress": "npx cypress open --env configFile=dev",
-    "cypress-record": "npx cypress run --record --key 6bc38aff-d016-4396-a610-dd1260b2f652",
+    "cypress-record": "npx cypress run --env configFile=dev",
+    "lint": "eslint .",
+    "lint-fix": "eslint --fix .",
     "eject": "react-scripts eject"
   },
   "dependencies": {
