--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "react-scripts test",
     "cypress": "npx cypress open --env configFile=dev",
     "cypress-record": "npx cypress run --env configFile=dev",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/",
+    "lint-fix": "eslint src/ --fix"
   },
   "dependencies": {
     "@emotion/react": "^11.8.2",
@@ -56,15 +58,9 @@
     "react-times": "^3.1.12",
     "react-toastify": "^8.2.0",
     "sweetalert2": "^11.4.7",
-    "typescript": "^4.6.2",
+    "typescript": "^4.4.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -80,7 +76,15 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.3.4",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "cypress": "^10.2.0",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "faker": "^5.5.3"
   }
 }
