--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,14 @@
     },
     "extends": [
         "plugin:react/recommended",
+        // "plugin:@typescript-eslint/recommended", used to lint ts
         "airbnb"
     ],
+    "settings": {
+      "import/resolver": {
+      "typescript": {}
+      }
+      },
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
@@ -20,9 +26,20 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "no-shadow": "off",
+        "@typescript-eslint/no-shadow": ["error"],
         "no-use-before-define": "off",
         "react/jsx-filename-extension": [ "warn", {"extensions": [".tsx"]} ],
-        "@typescript-eslint/no-use-before-define": ["error"]
+        "@typescript-eslint/no-use-before-define": ["error"],
+        "react/react-in-jsx-scope": "off",
+        "import/extensions": [
+          "error",
+          "ignorePackages",
+          {
+          "ts": "never",
+          "tsx": "never"
+          }
+          ]
     },
     "overrides": [
         {
