--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "html-react-parser": "^1.4.10",
     "intl-tel-input": "^17.0.16",
     "moment-timezone": "^0.5.34",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-calendar": "^3.7.0",
@@ -81,6 +82,7 @@
     "cypress": "^10.2.0",
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
