--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,6 @@
     "jsx": "react-jsx"
   },
   "include": ["src/**/*",  "types", "./setupTests.js"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "extensions": ["ts", "js"]
 }
