--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,13 +5,24 @@ on: push
 #   push:
 #     branches: [ main ]
 jobs:
-  build:
+  surge:
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to foo-bar.surge.sh
+      - uses: actions/checkout@v2
+      - name: installing node 
+        uses: actions/setup-node@v2
+        with: 
+          node-version: '14'
+      - name: Install dependencies
+          run: npm ci
+      - name: creating build
+        run: npm run build
+        
+      - name: Deploy to srurge
         uses: dswistowski/surge-sh-action@v1
         with:
           domain: 'xyzhospital.surge.sh'
-          project: '.'
+          project: './build'
           login: ${{ secrets.surge_login }}
           token: ${{ secrets.surge_token }}
+
