--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,15 +8,16 @@ jobs:
   surge:
     runs-on: ubuntu-latest
     steps:
-      # - uses: actions/checkout@v2
-      # - name: installing node 
-      #   uses: actions/setup-node@v2
-      #   with: 
-      #     node-version: '14'
-      # - name: Install dependencies
-      #     run: npm ci
-      # - name: creating build
-      #   run: npm run build
+      - name: Checkout code
+      - uses: actions/checkout@v2
+      - name: installing node 
+        uses: actions/setup-node@v2
+        with: 
+          node-version: '14'
+      - name: Install dependencies
+          run: npm ci
+      - name: creating build
+        run: npm run build
         
       - name: Deploy to srurge
         uses: dswistowski/surge-sh-action@v1
