--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,13 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v2
-      # - name: installing node 
-      #   uses: actions/setup-node@v2
-      #   with: 
-      #     node-version: '14'
-      # - name: Install dependencies
-      #     run: npm ci
+        uses: actions/checkout@v2
+      - name: installing node 
+        uses: actions/setup-node@v2
+        with: 
+          node-version: '14'
+      - name: Install dependencies
+          run: npm ci
       - name: creating build
         run: npm run build
         
