--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,8 @@
 name: Deployment
-on: push
+on:
+  push:
+    branches: [ main ]
 
-# on:
-#   push:
-#     branches: [ main ]
 jobs:
   surge:
     runs-on: ubuntu-latest
