--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "cypress": "npx cypress open --env configFile=dev",
+    "cypress-run": "npx cypress run",
     "cypress-record": "npx cypress run --env configFile=dev",
     "eject": "react-scripts eject",
-    "lint": "eslint src/",
+    "lint": "eslint cypress/ && eslint src/",
     "lint-fix": "eslint src/ --fix"
   },
   "dependencies": {
