--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
         "react/jsx-filename-extension": [ "warn", {"extensions": [".tsx"]} ],
         "@typescript-eslint/no-use-before-define": ["error"],
         "react/react-in-jsx-scope": "off",
+        "no-plusplus":"off",
         "import/extensions": [
           "error",
           "ignorePackages",
