--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "fuse.js": "^6.5.3",
     "html-react-parser": "^1.4.10",
     "intl-tel-input": "^17.0.16",
+    "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
+    "react-big-calendar": "^1.8.4",
     "react-calendar": "^3.7.0",
     "react-datepicker": "^4.4.0",
     "react-dom": "^17.0.2",
