--- a/package.json
+++ b/package.json
@@ -65,6 +65,12 @@
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -79,16 +85,7 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.3.4",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
     "cypress": "^10.2.0",
-    "eslint": "^7.20.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "faker": "^5.5.3"
   }
 }
