--- a/package.json
+++ b/package.json
@@ -54,12 +54,16 @@
     "react-loading-overlay-ts": "^1.0.4",
     "react-pro-sidebar": "^0.7.1",
     "react-quill": "^1.3.5",
+    "react-redux": "^7.0.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-select": "^5.3.0",
     "react-select-search": "^3.0.9",
     "react-times": "^3.1.12",
     "react-toastify": "^8.2.0",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "sweetalert2": "^11.4.7",
     "typescript": "^4.4.4",
     "web-vitals": "^2.1.4",
