--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,19 +15,19 @@ jobs:
           # wait for 2 minutes for the server to respond
           wait-on-timeout: 120  
           command: npx cypress run
-  lint:
-      runs-on: ubuntu-latest
-      strategy:
-        matrix:
-          node-version: [14.x]
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v2
-        - name: Set up Node.js ${{ matrix.node-version }}
-          uses: actions/setup-node@v2
-          with:
-            node-version: ${{ matrix.node-version }}
-        - name: Install dependencies
-          run: npm ci
-        - name: Run lint check
-          run: npm run lint
+  # lint:
+  #     runs-on: ubuntu-latest
+  #     strategy:
+  #       matrix:
+  #         node-version: [14.x]
+  #     steps:
+  #       - name: Checkout code
+  #         uses: actions/checkout@v2
+  #       - name: Set up Node.js ${{ matrix.node-version }}
+  #         uses: actions/setup-node@v2
+  #         with:
+  #           node-version: ${{ matrix.node-version }}
+  #       - name: Install dependencies
+  #         run: npm ci
+  #       - name: Run lint check
+  #         run: npm run lint
