--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.5.3",
+    "@reduxjs/toolkit": "^1.6.0-rc.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -54,12 +55,14 @@
     "react-loading-overlay-ts": "^1.0.4",
     "react-pro-sidebar": "^0.7.1",
     "react-quill": "^1.3.5",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-select": "^5.3.0",
     "react-select-search": "^3.0.9",
     "react-times": "^3.1.12",
     "react-toastify": "^8.2.0",
+    "redux-logger": "^3.0.6",
     "sweetalert2": "^11.4.7",
     "typescript": "^4.4.4",
     "web-vitals": "^2.1.4",
