--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,13 @@
 name: CI
 on: push
+
+env:
+  REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
+  REACT_APP_IMG_URL: ${{ secrets.REACT_APP_IMG_URL }}
+  REACT_APP_USER_POOL_ID: ${{ secrets.REACT_APP_USER_POOL_ID }}
+  REACT_APP_CLIENT_ID: ${{ secrets.REACT_APP_CLIENT_ID }}
+  REACT_APP_REGION: ${{ secrets.REACT_APP_REGION }}
+
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
