--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,13 @@ on:
   push:
     branches: [ master ]
 
+env:
+  REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
+  REACT_APP_IMG_URL: ${{ secrets.REACT_APP_IMG_URL }}
+  REACT_APP_USER_POOL_ID: ${{ secrets.REACT_APP_USER_POOL_ID }}
+  REACT_APP_CLIENT_ID: ${{ secrets.REACT_APP_CLIENT_ID }}
+  REACT_APP_REGION: ${{ secrets.REACT_APP_REGION }}
+
 jobs:
   surge:
     runs-on: ubuntu-latest
