--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-datepicker": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-jwt": "^1.2.0",
     "react-loading-overlay-ts": "^1.0.4",
     "react-pro-sidebar": "^0.7.1",
     "react-quill": "^1.3.5",
