--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@material-ui/core": "^4.12.3",
     "@mui/lab": "^5.0.0-alpha.155",
     "@mui/material": "^5.14.20",
+    "@mui/x-data-grid": "^7.3.1",
     "@reduxjs/toolkit": "^1.6.0-rc.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
