--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,8 @@ jobs:
           node-version: '14'
       - name: Install dependencies
         run: npm ci
+      - name: Generating new version
+        run: npm run prebuild
       - name: creating build
         run: npm run build
         
