--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": "https://github.com/AnanthaKannan/digitalHospital-FrontEnd",
   "scripts": {
     "start": "react-scripts start",
+    "prebuild": "node checkVersion.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "cypress": "npx cypress open --env configFile=dev",
