--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
-REACT_APP_API_URL=https://api.example.com
-REACT_APP_IMG_URL=https://image.example.com
-REACT_APP_USER_POOL_ID=your_user_pool_id
-REACT_APP_CLIENT_Id=your_client_id
-REACT_APP_REGION=your_region
+VITE_APP_API_URL=https://api.example.com
+VITE_APP_IMG_URL=https://image.example.com
+VITE_APP_USER_POOL_ID=your_user_pool_id
+VITE_APP_CLIENT_Id=your_client_id
+VITE_APP_REGION=your_region
