--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,11 +4,11 @@ on:
     branches: [ master ]
 
 env:
-  REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
-  REACT_APP_IMG_URL: ${{ secrets.REACT_APP_IMG_URL }}
-  REACT_APP_USER_POOL_ID: ${{ secrets.REACT_APP_USER_POOL_ID }}
-  REACT_APP_CLIENT_ID: ${{ secrets.REACT_APP_CLIENT_ID }}
-  REACT_APP_REGION: ${{ secrets.REACT_APP_REGION }}
+  VITE_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
+  VITE_APP_IMG_URL: ${{ secrets.REACT_APP_IMG_URL }}
+  VITE_APP_USER_POOL_ID: ${{ secrets.REACT_APP_USER_POOL_ID }}
+  VITE_APP_CLIENT_ID: ${{ secrets.REACT_APP_CLIENT_ID }}
+  VITE_APP_REGION: ${{ secrets.REACT_APP_REGION }}
 
 jobs:
   surge:
