--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           # Linux and MacOS
-          start: npm start
+          start: pnpm run dev
           wait-on: 'http://localhost:5173'
           # wait for 2 minutes for the server to respond
           wait-on-timeout: 120  
