--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,13 +21,11 @@ jobs:
       - name: installing node 
         uses: actions/setup-node@v2
         with: 
-          node-version: '14'
+          node-version: '20'
       - name: Install dependencies
-        run: npm ci
-      - name: Generating new version
-        run: npm run prebuild
+        run: pnpm ci
       - name: creating build
-        run: npm run build
+        run: pnpm run build
         
       - name: Deploy to srurge
         uses: dswistowski/surge-sh-action@v1
