--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,11 @@ jobs:
       - name: Set CI to false
         run: echo "CI=false" >> $GITHUB_ENV
       - name: installing node 
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with: 
           node-version: '20'
+      - name: Install pnpm
+        run: npm install -g pnpm@9.1.1
       - name: Install dependencies
         run: pnpm ci
       - name: creating build
