--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
         uses: dswistowski/surge-sh-action@v1
         with:
           domain: 'xyzhospital.surge.sh'
-          project: './build'
+          project: './dist'
           login: ${{ secrets.surge_login }}
           token: ${{ secrets.surge_token }}
 
