--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deployment
 on:
   push:
-    branches: [ ci-deploy-bug-fixed ]
+    branches: [ master ]
 
 env:
   VITE_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
