--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "^5.15.17",
     "@mui/x-data-grid": "^7.3.1",
