--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,24 @@ jobs:
           record: true
           parallel: true
           command: npx cypress run --record --key ${{ secrets.CYPRESS_RECORD_KEY }}
+
+  unit-test:
+      runs-on: ubuntu-latest
+      strategy:
+        matrix:
+          node-version: [20.x]
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v2
+        - name: Set up Node.js ${{ matrix.node-version }}
+          uses: actions/setup-node@v2
+          with:
+            node-version: ${{ matrix.node-version }}
+        - name: Install dependencies
+          run: npm ci
+        - name: Run unit-test
+          run: npm run test
+
   # lint:
   #     runs-on: ubuntu-latest
   #     strategy:
