--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,22 +35,24 @@ jobs:
           parallel: true
           command: npx cypress run --record --key ${{ secrets.CYPRESS_RECORD_KEY }}
 
-  unit-test:
-      runs-on: ubuntu-latest
-      strategy:
-        matrix:
-          node-version: [20.x]
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v2
-        - name: Set up Node.js ${{ matrix.node-version }}
-          uses: actions/setup-node@v2
-          with:
-            node-version: ${{ matrix.node-version }}
-        - name: Install dependencies
-          run: npm ci
-        - name: Run unit-test
-          run: npm run test
+  unittest:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set CI to false
+        run: echo "CI=false" >> $GITHUB_ENV
+      - name: installing node 
+        uses: actions/setup-node@v4
+        with: 
+          node-version: '20'
+      - name: Install pnpm
+        run: npm install -g pnpm@9.1.1
+      - name: Install dependencies
+        run: pnpm install
+      - name: Test unit test case
+        run: pnpm run test
+        
 
   # lint:
   #     runs-on: ubuntu-latest
