--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,8 +50,14 @@ jobs:
         run: npm install -g pnpm@9.1.1
       - name: Install dependencies
         run: pnpm install
-      - name: Test unit test case
+      - name: Run unit tests and generate report
         run: pnpm run test
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: junit-test-results
+          path: test-results/junit.xml
         
 
   # lint:
