--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-prod": "tsc && vite build",
     "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "test": "jest src",
+    "test": "jest src --ci",
     "test-file": "jest src/reusable/test/TextEditor.test.tsx",
     "cypress": "npx cypress open --env configFile=dev",
     "cypress-run": "npx cypress run",
@@ -70,6 +70,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "jest": "^30.0.3",
     "jest-environment-jsdom": "^30.0.2",
+    "jest-junit": "^16.0.0",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
